--- a/Lesson 2/index.html
+++ b/Lesson 2/index.html
@@ -13,7 +13,7 @@
         <li>git status - check the status</li>
         <li>git add - to stage the changes</li>
         <li>git commit - to save the changes (provide a message about them)</li>
-        <li>git push - to push it to the remove repo</li>
+        <li>git push - to push it to the remote repo</li>
     </ul>
 </body>
 </html>
