--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <li>
             <a href="./Lesson 3/">Lesson 3</a>
         </li>
+        <li>
+            <a href="./Lesson 4/">Lesson 4</a>
+        </li>
     </ul>
 </body>
 </html>
