added css style

--- a/Lesson 4/index.html
+++ b/Lesson 4/index.html
@@ -4,13 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume</title>
+    <style>
+        .header_content{
+            display: flex;
+            align-items: center;
+            grid-template-columns: 1fr 1fr 1fr;
+            column-gap: 5px;
+        }
+    </style>
 </head>
 <body>
     <div class="page_wrapper">
         <header class="my_header">
             <div class="header_content">
                 <a href="#">
-                    <img src="/img/Joey.jpg" alt="Joey" title="Joey">
-                </a>
+                    <img src="./img/Joey.jpg" alt="Joey" title="Joey"
+                         width="150"
+                         height="200">
+                </a><h1>Joey Tribianni</h1>
+                
+            
 </body>
 </html>
