added new test file and updated the initial one

--- a/Lesson 4/test.html
+++ b/Lesson 4/test.html
@@ -10,14 +10,11 @@
             align-items: center;
             grid-template-columns: 1fr 1fr 1fr;
             column-gap: 5px;
-            background-color:darkgreen;
+            background-color: blue;
         }
         .contact{
-            display:flex;
-            align-items:center;
-            grid-template-columns: 1fr 1fr 1fr;
-            column-gap: 5px;
-        }
+            float:left
+             }
     </style>
 </head>
 <body>
