.css file created

--- a/Lesson 5/index.html
+++ b/Lesson 5/index.html
@@ -5,47 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume</title>
+    <link rel="stylesheet" href="./styles/main.css">
 </head>
 
 <body>
-    <style>
-        .details {
-            background-color: darkolivegreen;
-            float: left;
-            height: 900px;
-            width: 400px;
-            outline: black thick;
-        }
-
-        img {
-            display: block;
-            margin-right: 50%; 
-        }
-
-        .main {
-            margin-left: 1%;
-            float: inline-start;
-            width: fit-content;
-        }
-    </style>
     <div class="page_wrapper">
         <div class="details">
             <a href="#">
-                <img src="./img/Joey.jpg" alt="Joey" title="Joey" width="200" height="250">
+                <img src="../Lesson 4/img/Joey.jpg" alt="Joey" title="Joey">
             </a>
+                <u>
+                    <h2 class="contact">Contact</h2>
+                </u>
+                <p class="phone">
+                    Phone:
+                    <a href="Tel: 999-786-456">999-786-456</a>
+                </p>
+                <p class="email">
+                    Email:
+                    <a href="Email: tribianni.joey@hotmail.com">tribianni.joey@hotmail.com</a>
+                </p>
             <u>
-                <h2>Contact</h2>
-            </u>
-            <p>
-                Phone:
-                <a href="Tel: 999-786-456">999-786-456</a>
-            </p>
-            <p>
-                Email:
-                <a href="Email: tribianni.joey@hotmail.com">tribianni.joey@hotmail.com</a>
-            </p>
-            <u>
-                <h2>Education</h2>
+                <h2 class="education">Education</h2>
             </u>
             <p>Highschool</p>
             <p>Phoebe's French Class</p>
