--- a/Lesson 5/index.html
+++ b/Lesson 5/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume</title>
     <link rel="stylesheet" href="./styles/main.css">
+    <script src="https://kit.fontawesome.com/5b942859f1.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -14,42 +15,40 @@
             <a href="#">
                 <img src="../Lesson 4/img/Joey.jpg" alt="Joey" title="Joey">
             </a>
-                <u>
-                    <h2 class="contact">Contact</h2>
-                </u>
-                <p class="phone">
-                    Phone:
-                    <a href="Tel: 999-786-456">999-786-456</a>
-                </p>
-                <p class="email">
-                    Email:
-                    <a href="Email: tribianni.joey@hotmail.com">tribianni.joey@hotmail.com</a>
-                </p>
+            <u>
+                <h2 class="contact">Contact</h2>
+            </u>
+            <i class="fa-solid fa-phone-slash"></i>
+                <p class="description phone">
+                Phone:
+                <a href="Tel: 999-786-456">999-786-456</a>
+            </p>
+            <i class="fa-solid fa-envelope"></i>
+            <p class="description">
+                Email:
+                <a href="Email: tribianni.joey@hotmail.com">tribianni.joey@hotmail.com</a>
+            </p>
             <u>
                 <h2 class="education">Education</h2>
             </u>
-            <p>Highschool</p>
-            <p>Phoebe's French Class</p>
+            <p class="description">Highschool</p>
+            <p class="description">Phoebe's French Class</p>
             <u>
                 <h2>Expertise</h2>
             </u>
-            <p>
-                Acting
-                <br>
-                Sales
-                <br>
-                Able to drink an entire gallon of milk in 10 seconds
-            </p>
+            <p class="description">Acting</p>
+            <p class="description">Sales</p>
+            <p class="description">Able to drink an entire gallon of milk in 10 seconds</p>
             <u>
                 <h2>Language</h2>
             </u>
-            <p>English</p>
-            <p>French</p>
+            <p class="description">English</p>
+            <p class="description">French</p>
         </div>
         <div class="main">
             <main>
-                <h1>Joey Tribianni</h1>
-                <h2>How you doin`?</h2>
+                <h1 calss="name">Joey Tribianni</h1>
+                <h2 class="intro">How you doin`?</h2>
                 <section>
                     <u>
                         <h2>
@@ -58,42 +57,42 @@
                     </u>
 
                     <ul>
-                        <li>
+                        <li class="list">
                             SE 3 EP 7 - Drama teacher
                         </li>
-                        <p>
-                            Joey becomes a learning extension teacher in soap acting. <br>
+                        <p class="description">
+                            Joey becomes a learning extension teacher in soap acting.<br>
                             He gives his students very unconventional acting advice.<br>
                             When Joey hears one of his students is also auditioning for the same role he wants,<br>
-                            he tries to sabotage him by giving him bad advice about how to play the character as a gay
+                            he tries to sabotage him by giving him bad advice about <br> how to play the character as a gay
                             man.<br>
-                            This backfires on Joey, as the other actor is appreciated for <br> his gay acting and
-                            selected for the part along with a two-year TV contract.
+                            This backfires on Joey, as the other actor is appreciated for his gay acting and
+                            selected <br> for the part along with a two-year TV contract.
                         </p>
-                        <li>
+                        <li class="list">
                             SE 2 EP 2 - Perfume seller
                         </li>
-                        <p>
+                        <p class="description">
                             Joey is having trouble with a new guy at work who dresses like a cowboy and who intrudes
                             Joey's section.<br>
                             Joey dresses up as a cowboy to be the best at work again.<br>
                             Joey and the cowboy have their showdown and Joey wins because the
                             cowboy sprays perfume <br> into a customer's eyes.
                         </p>
-                        <li>
+                        <li class="list">
                             SE 2 - Dr. Drake Ramoray
                         </li>
-                        <p>
+                        <p class="description">
                             Drake Ramoray first appears in Friends season two episode "The One With The Lesbian
                             Wedding," <br>
                             where he explains to the sister of a patient that he's treating her for a subcranial
                             hematoma.<br>
                             He then asks the sister out for coffee.
                         </p>
-                        <li>
+                        <li class="list">
                             SE 1 EP 6 - Al Pacino`s butt
                         </li>
-                        <p>
+                        <p class="description">
                             Joey's new agent manages to obtain him a role in the new Al Pacino movie.<br>
                             However, the role is Pacino's butt double in a shower scene.<br>
                             Despite this, Joey manages to ruin it by overacting his role, which later gets him
@@ -110,16 +109,16 @@
                         </h2>
                     </u>
                     <ul>
-                        <li>
+                        <li class="skills">
                             Confident
                         </li>
-                        <li>
+                        <li class="skills">
                             Caring
                         </li>
-                        <li>
+                        <li class="skills">
                             Supporting
                         </li>
-                        <li>
+                        <li class="skills">
                             Persuasive
                         </li>
                     </ul>
