--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <li>
             <a href="./Lesson 4/">Lesson 4</a>
         </li>
+        <li>
+            <a href="./Lesson 5/">Lesson 5</a>
+        </li>
     </ul>
 </body>
 </html>
