added lesson 6 to the root

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <li>
             <a href="./Lesson 5/">Lesson 5</a>
         </li>
+        <li>
+            <a href="./Lesson 6/">Lesson 6</a>
+        </li>
     </ul>
 </body>
 </html>
