added 3rd screen

--- a/Lesson 6/index.html
+++ b/Lesson 6/index.html
@@ -55,9 +55,7 @@
                 </div>
             </section>
         </main>
-        <section>
             <bottom class="powers">
-                <section class="superpowers">
                     <h2 class="super_title">We design tools to unveil your superpowers</h2>
                     <div class="elements">
                         <div class="tests">
@@ -84,8 +82,24 @@
                     <div class="bottom_action">
                         <a class="bottom_button" href="#" alt="bottom_button">sign up now</a>
                     </div>
-                </section>
             </bottom>
+            <section class="design_professionals">
+                <div class="design_description">
+                    <p>Effortless Validation for</p>
+                    <h2 class="professionals_title">Design Professionals</h2>
+                    <p>The Myspace page defines the individual, his or her characteristics, 
+                        traits, personal choices and the overall personality of the person.</p>
+                    <h2>Accessory makers</h2>
+                    <p>While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun</p>
+                    <h2>Alterationists</h2>
+                    <p>If you are looking for a new way to promote your business that won’t cost you more money,</p>
+                    <h2>Custom Design designers</h2>
+                    <p>If you are looking for a new way to promote your business that won’t cost you more money, </p>
+                </div>
+                <div class="professionals_image">
+                    <img src="./assets/img/professionals.svg" alt="professionals">
+                </div>
+            </section>   
 </body>
 
 </html>
