added next 2 screens

--- a/Lesson 6/index.html
+++ b/Lesson 6/index.html
@@ -45,7 +45,7 @@
                                 The most intuitive way to imagine your next user experience.
                             </p>
                             <button class="hero_button">Get started</button>
-                            <div class="box"></div>
+                            <!-- <div class="box"></div> -->
                             <button class="video_button">Watch the Video</button>
                         </div>
                         <div class="image">
@@ -54,43 +54,49 @@
                     </div>
                 </div>
             </section>
-        </main>
-            <bottom class="powers">
-                    <h2 class="super_title">We design tools to unveil your superpowers</h2>
-                    <div class="elements">
-                        <div class="tests">
-                            <span class="box_arrow"></span>
-                            <p class="power_title">First click tests</p>
-                            <p>While most people enjoy casino gambling</p>
+            <section class="powers">
+                <div class="powers_container">
+                    <div class="powers_content">
+                        <h2 class="super_title">We design tools to unveil your superpowers</h2>
+                        <div class="elements">
+                            <div class="tests">
+                                <span class="box_arrow"> <img class="arrow_image" src="./assets/img/icons/arrow.svg"
+                                        alt="arrow"> </span>
+                                <p class="power_title">First click tests</p>
+                                <p>While most people enjoy casino gambling</p>
+                            </div>
+                            <div class="surveys">
+                                <span class="box_surveys"> <img class="surveys_image" src="./assets/img/icons/survey.svg" alt="survey"> </span>
+                                <p class="power_title">Design surveys</p>
+                                <p>Sports betting, lottery and bingo playing for the fun</p>
+                            </div>
+                            <div class="preference">
+                                <span class="box_preference"><img class="preference_image" src="./assets/img/icons/heart.svg" alt="heart"></span>
+                                <p class="power_title">Preference tests</p>
+                                <p>The Myspace page defines the individual.</p>
+                            </div>
+                            <div class="sandclock">
+                                <span class="box_sandclock"><img class="sandclock_image" src="./assets/img/icons/sandclock.svg" alt="sandclock"></span>
+                                <p class="power_title">Five second testss</p>
+                                <p>Personal choices and the overall personality of the person. </p>
+                            </div>
                         </div>
-                        <div class="surveys">
-                            <span class="box_surveys"></span>
-                            <p class="power_title">Design surveys</p>
-                            <p>Sports betting, lottery and bingo playing for the fun</p>
-                        </div>
-                        <div class="preference">
-                            <span class="box_preference"></span>
-                            <p class="power_title">Preference tests</p>
-                            <p>The Myspace page defines the individual.</p>
-                        </div>
-                        <div class="second">
-                            <span class="box_second"></span>
-                            <p class="power_title">Preference tests</p>
-                            <p>The Myspace page</p>
+                        <div class="bottom_action">
+                            <a class="bottom_button" href="#" alt="bottom_button">sign up now</a>
                         </div>
                     </div>
-                    <div class="bottom_action">
-                        <a class="bottom_button" href="#" alt="bottom_button">sign up now</a>
-                    </div>
-            </bottom>
+                </div>
+            </section>
             <section class="design_professionals">
+                <div class="professionals_container">
                 <div class="design_description">
                     <p>Effortless Validation for</p>
                     <h2 class="professionals_title">Design Professionals</h2>
-                    <p>The Myspace page defines the individual, his or her characteristics, 
+                    <p>The Myspace page defines the individual, his or her characteristics,
                         traits, personal choices and the overall personality of the person.</p>
                     <h2>Accessory makers</h2>
-                    <p>While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun</p>
+                    <p>While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun
+                    </p>
                     <h2>Alterationists</h2>
                     <p>If you are looking for a new way to promote your business that won’t cost you more money,</p>
                     <h2>Custom Design designers</h2>
@@ -99,7 +105,42 @@
                 <div class="professionals_image">
                     <img src="./assets/img/professionals.svg" alt="professionals">
                 </div>
-            </section>   
+                </div>
+            </section>
+            <section class="managers">
+                <div class="managers_container">
+                    <div class="managers_image">
+                        <img src="./assets/img/managers.svg" alt="managers">
+                    </div>
+                    <div class="managers_description">
+                        <p>Easier decision making for</p>
+                        <h2 class="manager_title">Product Managers</h2>
+                        <p class="managers_details">The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. </p>
+                        <ul class="list">
+                            <li>Never worry about overpaying for your energy again.</li>
+                            <li>We will only switch you to energy companies that we trust and will treat you right</li>
+                            <li>We track the markets daily and know where the savings are.</li>  
+                        </ul>
+                    </div>
+                </div>
+            </section>
+            <section class="marketers">
+                <div class="marketers_container">
+                    <div class="marketers_optimisation">
+                        <p>Optimisation for</p>
+                        <h2 class="professionals_title">Marketers</h2>
+                        <p>Few would argue that, despite the advancements of feminism over the past three decades, women still face a double standard when it comes to their behavior.</p>
+                        <h2>Accessory makers</h2>
+                        <p>While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun</p>
+                        <h2>Alterationists</h2>
+                        <p>If you are looking for a new way to promote your business that won’t cost you more money, </p>
+                        <h2>Custom Design designers</h2>
+                        <p>If you are looking for a new way to promote your business that won’t cost you more money, </p>
+                    </div>
+                    <div class="marketers_image">
+                        <img src="./assets/img/marketers.svg" alt="marketers">
+                    </div>
+                </div>
+            </section>
 </body>
-
 </html>
