added footer and changed alignment

--- a/Lesson 6/index.html
+++ b/Lesson 6/index.html
@@ -77,12 +77,12 @@
                             </div>
                             <div class="sandclock">
                                 <span class="box_sandclock"><img class="sandclock_image" src="./assets/img/icons/sandclock.svg" alt="sandclock"></span>
-                                <p class="power_title">Five second testss</p>
+                                <p class="power_title">Five second tests</p>
                                 <p>Personal choices and the overall personality of the person. </p>
                             </div>
                         </div>
-                        <div class="bottom_action">
-                            <a class="bottom_button" href="#" alt="bottom_button">sign up now</a>
+                        <div class="elements_action">
+                            <a class="elements_button" href="#" alt="elements_button">sign up now</a>
                         </div>
                     </div>
                 </div>
@@ -116,11 +116,23 @@
                         <p>Easier decision making for</p>
                         <h2 class="manager_title">Product Managers</h2>
                         <p class="managers_details">The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. </p>
-                        <ul class="list">
-                            <li>Never worry about overpaying for your energy again.</li>
-                            <li>We will only switch you to energy companies that we trust and will treat you right</li>
-                            <li>We track the markets daily and know where the savings are.</li>  
-                        </ul>
+                            <ul class="list">
+                                <li class="list_item">
+                                    <span class="list_copy">
+                                        Never worry about overpaying for your energy again.
+                                    </span>
+                                </li>
+                                <li class="list_item">
+                                    <span class="list_copy">
+                                       We will only switch you to energy companies that we trust and will treat you right
+                                    </span> 
+                                </li>
+                                <li class="list_item">
+                                    <span class="list_copy">
+                                        We track the markets daily and know where the savings are.
+                                    </span>
+                                </li>  
+                            </ul>
                     </div>
                 </div>
             </section>
@@ -142,5 +154,52 @@
                     </div>
                 </div>
             </section>
+        <footer class="my_footer">
+            <div class="footer_container">
+                <a class="footer_logo" href="#">
+                    <img class="footer_image" src="./assets/img/logo.svg" alt="logo">
+                </a>
+                <div class="info_list">
+                <ul class="info">
+                    <li>
+                        <a href="#">About Us</a>
+                    </li>
+                    <li>
+                        <a href="#">Blog</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact</a>
+                    </li>
+                    <li>
+                        <a href="#">FAQ</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="services_list">
+                <ul class="info_services">
+                    <li>
+                        <a href="#">Disclaimer</a>
+                    </li>
+                    <li>
+                        <a href="#">Financing</a>
+                    </li>
+                    <li>
+                        <a href="#">Privacy Policy</a>
+                    </li>
+                    <li>
+                        <a href="#">Terms of Service</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="form_input">
+                <form>
+                    <input class="input" type="text">
+                </form>
+                <button class="footer_button">
+                    <a class="footer_form" href="#">Sign up Now</a>
+                </button>
+            </div>
+            </div>
+        </footer>
 </body>
 </html>
