--- a/Lesson 6/indextest.html
+++ b/Lesson 6/indextest.html
@@ -10,7 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./styles/redostyle.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body>
@@ -77,12 +77,12 @@
                             </div>
                             <div class="sandclock">
                                 <span class="box_sandclock"><img class="sandclock_image" src="./assets/img/icons/sandclock.svg" alt="sandclock"></span>
-                                <p class="power_title">Five second tests</p>
+                                <p class="power_title">Five second testss</p>
                                 <p>Personal choices and the overall personality of the person. </p>
                             </div>
                         </div>
-                        <div class="elements_action">
-                            <a class="elements_button" href="#" alt="elements_button">sign up now</a>
+                        <div class="bottom_action">
+                            <a class="bottom_button" href="#" alt="bottom_button">sign up now</a>
                         </div>
                     </div>
                 </div>
