--- a/Lesson 7/index.html
+++ b/Lesson 7/index.html
@@ -8,6 +8,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="style" href="./styles/fontawesome.css">
+    <link rel="style" href="./styles/brands.css">
+    <link rel="style" href="./styles/solid.css">
+
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 
@@ -44,6 +48,9 @@
                             </p>
                             <button class="hero_button">Get started</button>
                             <!-- <div class="box"></div> -->
+                            <div class="play_icon">
+                                <i class="fa-solid fa-play"></i>
+                            </div>
                             <button class="video_button">Watch the Video</button>
                         </div>
                         <div class="image">
