Added Lesson 7 to the root

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <li>
             <a href="./Lesson 6/">Lesson 6</a>
         </li>
+        <li>
+            <a href="./Lesson 7/">Lesson 7</a>
+        </li>
     </ul>
 </body>
 </html>
