updating with fa

--- a/Lesson 7/index.html
+++ b/Lesson 7/index.html
@@ -8,9 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="style" href="./styles/fontawesome.css">
-    <link rel="style" href="./styles/brands.css">
-    <link rel="style" href="./styles/solid.css">
+    <link rel="stylesheet" href="./styles/fontawesome.css">
+    <link rel="stylesheet" href="./styles/brands.css">
+    <link rel="stylesheet" href="./styles/solid.css">
 
     <link rel="stylesheet" href="./styles/style.css">
 </head>
@@ -48,10 +48,14 @@
                             </p>
                             <button class="hero_button">Get started</button>
                             <!-- <div class="box"></div> -->
-                            <div class="play_icon">
+                            <!--<div class="hero_button_actions"> -->
+                            <div class="hero_button_actions">
+                                <div class="play_button">
                                 <i class="fa-solid fa-play"></i>
-                            </div>
+                                </div>
+                            <!--</div>-->
                             <button class="video_button">Watch the Video</button>
+                        </div>
                         </div>
                         <div class="image">
                             <img src="./assets/img/hero.svg" alt="hero image">
