--- a/Lesson 7/index.html
+++ b/Lesson 7/index.html
@@ -69,23 +69,35 @@
                         <h2 class="super_title">We design tools to unveil your superpowers</h2>
                         <div class="elements">
                             <div class="tests">
-                                <span class="box_arrow"> <img class="arrow_image" src="./assets/img/icons/arrow.svg"
-                                        alt="arrow"> </span>
+                                <!--<span class="box_arrow"> <img class="arrow_image" src="./assets/img/icons/arrow.svg"
+                                        alt="arrow"> </span>-->
+                                        <div class="arrow_pointer">
+                                    <i class="fa-solid fa-arrow-pointer"></i>
+                                </div>
                                 <p class="power_title">First click tests</p>
                                 <p>While most people enjoy casino gambling</p>
                             </div>
                             <div class="surveys">
-                                <span class="box_surveys"> <img class="surveys_image" src="./assets/img/icons/survey.svg" alt="survey"> </span>
+                                <!--<span class="box_surveys"> <img class="surveys_image" src="./assets/img/icons/survey.svg" alt="survey"> </span>-->
+                                <div class="stumble">
+                                    <i class="fa-brands fa-stumbleupon"></i>
+                                </div>
                                 <p class="power_title">Design surveys</p>
                                 <p>Sports betting, lottery and bingo playing for the fun</p>
                             </div>
                             <div class="preference">
-                                <span class="box_preference"><img class="preference_image" src="./assets/img/icons/heart.svg" alt="heart"></span>
+                                <!--<span class="box_preference"><img class="preference_image" src="./assets/img/icons/heart.svg" alt="heart"></span>-->
+                                <div class="heart">
+                                    <i class="fa-solid fa-heart"></i>
+                                </div>
                                 <p class="power_title">Preference tests</p>
                                 <p>The Myspace page defines the individual.</p>
                             </div>
                             <div class="sandclock">
-                                <span class="box_sandclock"><img class="sandclock_image" src="./assets/img/icons/sandclock.svg" alt="sandclock"></span>
+                                <!--<span class="box_sandclock"><img class="sandclock_image" src="./assets/img/icons/sandclock.svg" alt="sandclock"></span>-->
+                                <div class="hourglass">
+                                    <i class="fa-solid fa-hourglass-half"></i>
+                                </div>
                                 <p class="power_title">Five second tests</p>
                                 <p>Personal choices and the overall personality of the person. </p>
                             </div>
@@ -126,16 +138,25 @@
                         <h2 class="manager_title">Product Managers</h2>
                         <p class="managers_details">The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. </p>
                             <ul class="list">
+                                <div class="check">
+                                    <i class="fa-solid fa-check"></i>
+                                </div>
                                 <li class="list_item">
                                     <span class="list_copy">
                                         Never worry about overpaying for your energy again.
                                     </span>
                                 </li>
+                                <div class="check">
+                                    <i class="fa-solid fa-check"></i>
+                                </div>
                                 <li class="list_item">
                                     <span class="list_copy">
                                        We will only switch you to energy companies that we trust and will treat you right
                                     </span> 
                                 </li>
+                                <div class="check">
+                                    <i class="fa-solid fa-check"></i>
+                                </div>
                                 <li class="list_item">
                                     <span class="list_copy">
                                         We track the markets daily and know where the savings are.
