--- a/Lesson 7/index.html
+++ b/Lesson 7/index.html
@@ -135,33 +135,39 @@
                     </div>
                     <div class="managers_description">
                         <p>Easier decision making for</p>
-                        <h2 class="manager_title">Product Managers</h2>
+                        <h2 class="managers_title">Product Managers</h2>
                         <p class="managers_details">The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. </p>
                             <ul class="list">
+                                <li class="list_iem">
                                 <div class="check">
                                     <i class="fa-solid fa-check"></i>
-                                <li class="list_item">
+                                <!--<li class="list_item">-->
                                 </div>
+                                <!--</li>-->
                                     <span class="list_copy">
                                         Never worry about overpaying for your energy again.
                                     </span>
                                 </li>
+                                <li class="list_item">
                                 <div class="check">
                                     <i class="fa-solid fa-check"></i>
-                                <li class="list_item">
+                                <!--<li class="list_item">-->
                                 </div>
+                                <!--</li>-->
                                     <span class="list_copy">
                                        We will only switch you to energy companies that we trust and will treat you right
                                     </span> 
                                 </li>
+                                <li class="list_item">
                                 <div class="check">
                                     <i class="fa-solid fa-check"></i>
-                                <li class="list_item">
+                                <!--<li class="list_item">-->
                                 </div>
+                                <!--</li>-->
                                     <span class="list_copy">
                                         We track the markets daily and know where the savings are.
                                     </span>
-                                </li>  
+                                </li>
                             </ul>
                     </div>
                 </div>
