--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         <li>
             <a href="./Lesson 7/">Lesson 7</a>
         </li>
+        <li>
+            <a href="./Lesson 14_Animations/">Lesson 14 Animations</a>
+        </li>
     </ul>
 </body>
 </html>
