--- a/Lesson 14_Animations/index.html
+++ b/Lesson 14_Animations/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="birthday_card">
             <p class="wish">
-                Happy birthday, Alex. May all your wishes come true!
+                Happy delayed birthday, Alex. May all your wishes come true!
             <i class="fa-solid fa-cake-candles"></i>
             </p>
         </div>
