--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
         <li>
             <a href="./Lesson 14_Animations/">Lesson 14 Animations</a>
         </li>
+        <li>
+            <a href="./Lesson 15_Forms/">Lesson 15 Forms</a>
+        </li>
+        <li>
+            <a href="./Lection15_Forms_updated/">Lesson 15 Forms_Updated</a>
+        </li>
     </ul>
 </body>
 </html>
